gremlin-pipes is now its own top-level project. NOTE -- this is NOT permanent. talking with @spmallette on figuring how to make this a tutorial. Need it into a project first. As things advance we can move the project elsewhere.

--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,7 @@ limitations under the License.
         <module>gremlin-groovy-test</module>
         <module>tinkergraph-gremlin</module>
         <module>gremlin-python</module>
+        <module>gremlin-pipes</module>
         <module>hadoop-gremlin</module>
         <module>spark-gremlin</module>
         <module>giraph-gremlin</module>
