breaking the parser  up -- the concept is of a collection of 'walkers' moving over a matrix of characters. walkers split when they see branches. Just like Gremlin....weird.

--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,7 @@ limitations under the License.
         <module>gremlin-groovy-test</module>
         <module>tinkergraph-gremlin</module>
         <module>gremlin-python</module>
+        <!-- TODO: WHERE DOES THIS GO? -->
         <module>gremlin-pipes</module>
         <module>hadoop-gremlin</module>
         <module>spark-gremlin</module>
